--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,5 @@ android {
 }
 
 dependencies {
-    compile 'com.github.merlinal:MRecyclerView:-SNAPSHOT'
+    compile 'com.github.merlinal:mrecyclerbiew:-SNAPSHOT'
 }
